--- a/c/makefile
+++ b/c/makefile
@@ -8,7 +8,7 @@ LIB = lib
 SRC = src
 
 all: $(BIN)/game_analyser $(BIN)/get_gameid $(BIN)/ards_game_to_xml \
-     $(BIN)/ards_game_ls
+     $(BIN)/ards_game_ls $(BIN)/ards_mem_eval
 
 # -----------------------------------------------------------------------------
 # Executables                                                              {{{1
@@ -28,6 +28,9 @@ $(BIN)/ards_game_ls: $(OBJ)/ards_game_ls.o $(OBJ)/cn_vec.o $(OBJ)/cn_cmp.o \
                      $(OBJ)/cn_map.o $(OBJ)/ards_io.o
 	$(CC) $(CFLAGS) -o $@ $^
 
+$(BIN)/ards_mem_eval: $(OBJ)/ards_mem_eval.o
+	$(CC) $(CFLAGS) -o $@ $^
+
 # -----------------------------------------------------------------------------
 # Object Files (Applications)                                              {{{1
 # -----------------------------------------------------------------------------
@@ -42,6 +45,9 @@ $(OBJ)/ards_game_to_xml.o: $(SRC)/ards_game_to_xml.c
 	$(CC) $(CFLAGS) -o $@ -c $<
 
 $(OBJ)/ards_game_ls.o: $(SRC)/ards_game_ls.c
+	$(CC) $(CFLAGS) -o $@ -c $<
+
+$(OBJ)/ards_mem_eval.o: $(SRC)/ards_mem_eval.c
 	$(CC) $(CFLAGS) -o $@ -c $<
 
 # -----------------------------------------------------------------------------
